Fixed roles details h4 size on mobile

--- a/src/styles/views/_role-details.scss
+++ b/src/styles/views/_role-details.scss
@@ -280,6 +280,13 @@
 
                 .title__container {
 					@include center-content(0, 30px);
+
+					h4 {
+						font-size: 1.5rem;
+                        line-height: 2.25rem;
+						padding: 0 0.7rem;
+					}
+
                     h3 {
                         font-size: 1.5rem;
                         line-height: 2.25rem;
